--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.15.0",
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "independent"
 }
