--- a/packages/@asterics-docs/shared-utils/package.json
+++ b/packages/@asterics-docs/shared-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asterics-docs/shared-utils",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.1-alpha.0",
   "description": "shared utilities for asterics-docs",
   "license": "GPL-3.0",
   "main": "lib/index.js",
@@ -36,8 +36,8 @@
   "scripts": {
     "tsc": "tsc"
   },
-  "dependencies": {},
   "engines": {
     "node": ">=10.15"
-  }
+  },
+  "gitHead": "ad642d0530868c3246767d6c093a6e28f90d829f"
 }
