--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -15,14 +15,33 @@
     "url": "git+https://github.com/asterics/asterics-docs.js.git",
     "path": "packages/@asterics-docs/vuepress-theme-docs"
   },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
+  "scripts": {},
   "bugs": {
     "url": "https://github.com/asterics/asterics-docs.js/issues"
   },
   "dependencies": {
-    "@vuepress/theme-default": "^1.0.4"
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@vuepress/plugin-back-to-top": "^1.1.0",
+    "@vuepress/plugin-medium-zoom": "^1.1.0",
+    "@vuepress/theme-default": "^1.0.4",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-kbd": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "twemoji": "^12.1.3"
   },
   "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2"
 }
