--- a/packages/@asterics-docs/tool/package.json
+++ b/packages/@asterics-docs/tool/package.json
@@ -21,5 +21,20 @@
   "scripts": {},
   "bugs": {
     "url": "https://github.com/asterics/asterics-docs.js/issues"
+  },
+  "dependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/node": "^10.14.10",
+    "ansi-escapes": "^4.3.1",
+    "chalk": "^3.0.0",
+    "lerna": "^3.15.0",
+    "nodegit": "^0.26.5",
+    "typescript": "^3.5.2",
+    "yargs": "^15.1.0"
   }
 }
