--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -27,9 +27,6 @@
     "@vuepress/plugin-back-to-top": "^1.4.0",
     "@vuepress/plugin-medium-zoom": "^1.4.0",
     "@vuepress/theme-default": "^1.4.0",
-    "animate.css": "^3.7.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.11.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-deflist": "^2.0.3",
@@ -41,8 +38,7 @@
     "markdown-it-sup": "^1.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "twemoji": "^12.1.5",
-    "vuex": "^3.1.3"
+    "twemoji": "^12.1.5"
   },
   "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2"
 }
