--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -38,7 +38,8 @@
     "markdown-it-sup": "^1.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "twemoji": "^12.1.5"
+    "twemoji": "^12.1.5",
+    "vuex": "^3.1.3"
   },
   "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2"
 }
