--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -20,17 +20,25 @@
     "url": "https://github.com/asterics/asterics-docs.js/issues"
   },
   "dependencies": {
+    "@asterics/web-app-utils": "^0.0.1-alpha.6",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@vuepress/plugin-back-to-top": "^1.4.0",
-    "@vuepress/plugin-medium-zoom": "^1.4.0",
-    "@vuepress/theme-default": "^1.4.0",
+    "@vuepress/plugin-back-to-top": "^1.4.1",
+    "@vuepress/plugin-medium-zoom": "^1.4.1",
+    "@vuepress/theme-default": "^1.4.1",
+    "bowser": "^2.9.0",
+    "fuzzy-search": "^3.2.1",
+    "lodash.debounce": "^4.0.8",
     "markdown-it-abbr": "^1.0.4",
+    "markdown-it-attrs": "^3.0.2",
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-fontawesome": "^0.3.0",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-kbd": "^2.0.0",
@@ -38,8 +46,17 @@
     "markdown-it-sup": "^1.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
+    "swiper": "^5.3.8",
     "twemoji": "^12.1.5",
-    "vuex": "^3.1.3"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue2-perfect-scrollbar": "=1.4.0",
+    "vuepress-plugin-directory-classifier": "^0.0.1",
+    "vuex": "^3.1.3",
+    "youtube-player": "^5.5.2"
   },
-  "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2"
+  "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2",
+  "devDependencies": {
+    "vuepress-plugin-dehydrate": "^1.1.3"
+  }
 }
