--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -27,9 +27,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@vuepress/plugin-back-to-top": "^1.4.1",
-    "@vuepress/plugin-medium-zoom": "^1.4.1",
-    "@vuepress/theme-default": "^1.4.1",
+    "@vuepress/plugin-back-to-top": "^1.5.0",
+    "@vuepress/plugin-medium-zoom": "^1.5.0",
+    "@vuepress/theme-default": "^1.5.0",
     "bowser": "^2.9.0",
     "fuzzy-search": "^3.2.1",
     "lodash.debounce": "^4.0.8",
@@ -48,14 +48,12 @@
     "sass-loader": "^8.0.2",
     "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^5.3.8",
-    "twemoji": "^12.1.5",
+    "twemoji": "^12.1.6",
     "vue-awesome-swiper": "^4.1.1",
     "vuepress-plugin-directory-classifier": "^0.1.0",
     "vuex": "^3.1.3",
     "youtube-player": "^5.5.2"
   },
   "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2",
-  "devDependencies": {
-    "vuepress-plugin-dehydrate": "^1.1.3"
-  }
+  "devDependencies": {}
 }
