--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asterics-docs/vuepress-theme-docs",
-  "version": "0.0.1-beta.10+2bfdde2",
+  "version": "0.0.1-beta.11",
   "description": "Vuepress theme for AsTeRICS Docs",
   "license": "GPL-3.0",
   "author": "Alija Sabic <sabic.alija@gmail.com>",
@@ -54,6 +54,5 @@
     "vuex": "^3.1.3",
     "youtube-player": "^5.5.2"
   },
-  "gitHead": "2bfdde2f5cfb7ad949cdc58e21aef5fb38aeddf2",
-  "devDependencies": {}
+  "gitHead": "50c8673819bbb8b86dedba6e9572f40d91bdbac0"
 }
