--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -6,6 +6,9 @@
   "author": "Alija Sabic <sabic.alija@gmail.com>",
   "homepage": "https://github.com/asterics/asterics-docs.js#readme",
   "main": "index.js",
+  "engines": {
+    "node": ">12.0.0 <13.0.0"
+  },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
