--- a/packages/@asterics-docs/tool/package.json
+++ b/packages/@asterics-docs/tool/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asterics-docs/tool",
-  "version": "0.0.1-beta.26",
+  "version": "0.0.1",
   "description": "Documentation management tool for AsTeRICS",
   "license": "GPL-3.0",
   "author": "Alija Sabic <sabic.alija@gmail.com>",
