--- a/packages/@asterics-docs/vuepress-theme-docs/package.json
+++ b/packages/@asterics-docs/vuepress-theme-docs/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/asterics/asterics-docs.js#readme",
   "main": "index.js",
   "engines": {
-    "node": ">12.0.0 <13.0.0"
+    "node": ">14.0.0 <15.0.0"
   },
   "publishConfig": {
     "access": "public",
@@ -24,37 +24,39 @@
   },
   "dependencies": {
     "@asterics/web-app-utils": "^0.0.1-alpha.6",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@vuepress/plugin-back-to-top": "^1.5.0",
-    "@vuepress/plugin-medium-zoom": "^1.5.0",
-    "@vuepress/theme-default": "^1.5.0",
-    "bowser": "^2.9.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^2.0.9",
+    "@vuepress/plugin-back-to-top": "^1.9.8",
+    "@vuepress/plugin-medium-zoom": "^1.9.8",
+    "@vuepress/plugin-pwa": "^1.9.8",
+    "@vuepress/theme-default": "^1.9.8",
+    "bowser": "^2.11.0",
     "fuzzy-search": "^3.2.1",
     "lodash.debounce": "^4.0.8",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-attrs": "^3.0.2",
+    "markdown-it-attrs": "^4.1.6",
     "markdown-it-checkbox": "^1.1.0",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
     "markdown-it-fontawesome": "^0.3.0",
-    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-footnote": "^3.0.3",
     "markdown-it-imsize": "^2.0.1",
-    "markdown-it-kbd": "^2.0.0",
+    "markdown-it-kbd": "^2.2.2",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.2.0",
     "smoothscroll-polyfill": "^0.4.4",
     "swiper": "^5.3.8",
     "twemoji": "^12.1.6",
     "vue-awesome-swiper": "^4.1.1",
+    "vuepress": "^1.9.8",
     "vuepress-plugin-directory-classifier": "^0.1.0",
-    "vuex": "^3.1.3",
+    "vuex": "^3.6.2",
     "youtube-player": "^5.5.2"
   },
   "gitHead": "50c8673819bbb8b86dedba6e9572f40d91bdbac0"
